 ** New converter for type timestamp.

 ** New function pq_conninfo.

 ** Fix for includes on Apple.

database 2.1.1:
---------------

 ** Account for system-dependence of postgresql include directories.

 ** Work around problem with sequential addpath in 'pkg build'.

database 2.1.0:
---------------

 ** pq_exec_params: An Octave cell-array can be used as data for 'copy
    from stdin'.

database 2.0.1:
---------------

 ** Bugfix of random crash at initialization time.

Initial release of new package database 2.0.0:
----------------------------------------------

** This is a complete replacement of the former database package and
   is not compatible with previous releases. The current release only
   supports postgresql.

** Functions:

     pq_connect:      connect to a postgresql database,

     pq_exec_params:  execute an SQL command with optional parameters
                      and return result,

     pq_update_types: used if defined types change
                      during connection time,

     pq_lo_import:    import large object from client side,

     pq_lo_export:    export large object to client side,

     pq_lo_unlink:    delete large object,

     pq_close:        disconnect from database.