@@ -117,44 +117,44 @@ no conversion \\
 timestamp &
 1114 &
 1115 &
-string &
+int64 or double &
 yes &
 see file timeformats.txt \\
 
 timestamptz &
 1184 &
 1185 &
-string &
+int64 or double &
 yes &
-(put off implementation) \\
+see file timeformats.txt \\
 
 time &
 1083 &
 1183 &
-string &
+int64 or double &
 yes &
-(put off implementation) \\
+see file timeformats.txt \\
 
 timetz &
 1266 &
 1270 &
-string &
+cell: int64 or double, int32 &
 yes &
-(put off implementation) \\
+see file timeformats.txt \\
 
 date &
 1082 &
 1182 &
-string &
+int32 &
 yes &
-(put off implementation) \\
+see file timeformats.txt \\
 
 interval &
 1186 &
 1187 &
 string &
-yes &
-(put off implementation) \\
+cell: int64 or double, int32, int32 &
+see file timeformats.txt \\
 
 bool &
 16 &
